[package]
name = "redox-ecc"
version = "0.1.0"
authors = ["Armando Faz Hernandez"]
edition = "2018"
description = "elliptic curve arithmetic"
keywords = ["elliptic curve", "math", "crypto", "ecc", "elliptic", "weierstrass"]
categories = ["cryptography", "no-std"]
readme = "README.md"
license = "BSD-3-Clause"

[[bench]]
name = "field"
harness = false

[[bench]]
name = "curve"
harness = false

[[bench]]
name = "h2c"
harness = false

[dependencies]
impl_ops = "0.1.1"
num-bigint = "0.2.6"
num-integer = "0.1.42"
num-traits = "0.2.11"
sha2 = "0.8.1"
hkdf = "0.8.0"
digest = "0.8.1"
doc-comment = "0.3.1"

[dev-dependencies]
criterion = "0.3"
