[package]
name = "redox-ecc"
version = "0.2.3"
authors = ["Armando Faz Hernandez"]
edition = "2021"
description = "elliptic curve arithmetic"
keywords = ["elliptic curve", "math", "crypto", "ecc", "elliptic", "weierstrass"]
categories = ["cryptography", "math"]
readme = "readme.md"
license = "BSD-3-Clause"

[[bench]]
name = "field"
harness = false

[[bench]]
name = "curve"
harness = false

[dependencies]
impl_ops = "0.1.1"
num-bigint = { default-features = false, version = "0.4.3"}
num-integer = "0.1.44"
num-traits = "0.2.14"
doc-comment = "0.3.3"
atomic_refcell = "0.1.8"
heapless = "0.7.16"

[dev-dependencies]
criterion = "0.3.5"
